--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				            <li class="active"><a class="page-scroll" href="#slider-part" >主页</a></li>
 				            <li><a class="page-scroll" href="https://zhenbei.xyz/mcdownload/index.php" >下载 Minecraft</a></li>
 				            <li><a class="page-scroll" href="http://zhenbei.xyz/mcdownload/home/help.php" >反馈</a></li>
-				            <li><a class="page-scroll" href="https://zhenbei.xyz" >振北内容中心</a></li>
+				            <li><a class="page-scroll" href="https://zhenbei.xyz" >内容中心</a></li>
 				            <li><a class="page-scroll" href="https://zhenbei.xyz/platform.php" >开放平台</a></li>
 				            
 				        </ul>
@@ -90,10 +90,10 @@
                     <div class="col-md-7 col-md-offset-1">
                         <div class="slider-content ">
                             <h1>再见极域</h1>
-                            <h2>摆脱极域的控制，“高效”上课。</h2>
+                            <h2>摆脱极域的控制，「高效」上课。</h2>
                             <ul class="top-link list-inline">
                                 <li><a href="http://222.180.160.110:6010/api/alien/download/0b1ef880-e212-4906-65aa-c89dadcc0b75/%E5%86%8D%E8%A7%81%E6%9E%81%E5%9F%9F.exe"><i class="fa fa-windows"></i> 八中云盘</a></li>
-								<li><a href="https://cdn.zhenbei.xyz/app/%E5%86%8D%E8%A7%81%E6%9E%81%E5%9F%9F.exe"><i class="fa fa-windows"></i> 振北 CDN</a></li>
+								<li><a href="https://cdn.zhenbei.xyz/app/%E5%86%8D%E8%A7%81%E6%9E%81%E5%9F%9F.exe"><i class="fa fa-windows"></i> 振冬 CDN</a></li>
 								<li><a href="./再见极域.exe"><i class="fa fa-windows"></i> Github</a></li>
                             </ul>
                         </div>
@@ -179,7 +179,7 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="copyright">
-								<p>&copy; copyright reserved to <span>ZhenBei</span> - 2022</p>
+								<p>&copy; copyright reserved to <span>ZhenDong</span> - 2022</p>
 							</div>
 						</div>
 						<div class="col-md-6">
