--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <h2>摆脱极域的控制，「高效」上课。</h2>
                             <ul class="top-link list-inline">
                                 <li><a href="http://222.180.160.110:6010/api/alien/download/0b1ef880-e212-4906-65aa-c89dadcc0b75/%E5%86%8D%E8%A7%81%E6%9E%81%E5%9F%9F.exe"><i class="fa fa-windows"></i> 八中云盘</a></li>
-								<li><a href="https://cdn.zhenbei.xyz/app/%E5%86%8D%E8%A7%81%E6%9E%81%E5%9F%9F.exe"><i class="fa fa-windows"></i> 振冬 CDN</a></li>
+								<li><a href="https://zhenbeicdn.oss-cn-hongkong.aliyuncs.com/app/%E5%86%8D%E8%A7%81%E6%9E%81%E5%9F%9F.exe"><i class="fa fa-windows"></i> 振冬 CDN</a></li>
 								<li><a href="./再见极域.exe"><i class="fa fa-windows"></i> Github</a></li>
                             </ul>
                         </div>
