--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </ul>
           <hr class="border-gray-700 my-4" />
           <div class="flex flex-col md:flex-row justify-between text-center md:text-left text-gray-400">
-            <p>&copy; copyright reserved to <span>ZhenDong</span> - 2022</p>
+            <p>&copy; 版权所有 <span>ZhenDong</span> - 2025</p>
             <p></p>
           </div>
         </div>
