--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     body {
       margin: 0;
-      padding-top: 100px; /* 防止内容被遮挡 */
+      padding-top: 50px; /* 防止内容被遮挡 */
     }
   </style>
     <style>
@@ -35,7 +35,7 @@
 
 
   <div class="top-banner">
-    🔔 立即尝试：<a href="https://nbb.zhendong.ac.cn/">"新版「再见极域」</a>
+    🔔 立即尝试：<a href="https://nbb.zhendong.ac.cn/">新版「再见极域」</a>
   </div>
   <body class="bg-gray-100">
     <header class="bg-white shadow-md sticky top-0 z-10">
